--- a/web/index.html
+++ b/web/index.html
@@ -4,26 +4,16 @@
   <base href="$FLUTTER_BASE_HREF">
 
   <meta charset="UTF-8">
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Smart Charge App">
+  <title>SmartCharge</title>
 
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="SmartCharge">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="icon" type="image/png" href="icons/Icon-192.png">
 
-  <title>Smart Charger</title>
   <link rel="manifest" href="manifest.json">
-
-  <style>
-    /* Evita lo sfarfallio bianco durante il caricamento */
-    body {
-      background-color: #020507;
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-    }
-  </style>
+  
+  ...
 </head>
 <body>
   <script>
