Configurazione finale icone e apple-touch-icon

--- a/web/index.html
+++ b/web/index.html
@@ -6,10 +6,9 @@
   <meta charset="UTF-8">
   <title>SmartCharge</title>
 
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
-  <link rel="icon" type="image/png" href="icons/Icon-192.png">
+  <link rel="icon" href="favicon.ico" sizes="any">
+  
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
   <link rel="manifest" href="manifest.json">
   
