--- a/web/index.html
+++ b/web/index.html
@@ -16,20 +16,19 @@
 </head>
 <body>
   <script>
-    window.addEventListener('load', function(ev) {
-      // Inizializzazione manuale del motore Flutter per forzare il renderer HTML
-      // Questo risolve l'errore CORS che vedevi nella console
-      _flutter.loader.loadEntrypoint({
-        onEntrypointLoaded: function(engineInitializer) {
-          engineInitializer.initializeEngine({
-            renderer: "html" 
-          }).then(function(appRunner) {
-            appRunner.runApp();
-          });
-        }
-      });
+  window.addEventListener('load', function(ev) {
+    _flutter.loader.load({
+      serviceWorker: {
+        serviceWorkerVersion: {{flutter_service_worker_version}},
+      },
+      onEntrypointLoaded: function(engineInitializer) {
+        engineInitializer.initializeEngine().then(function(appRunner) {
+          appRunner.runApp();
+        });
+      }
     });
-  </script>
+  });
+</script>
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
